syntax = "proto3";

package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ListUsers(ListUsersRequest) returns ( ListUsersResponse);
}


message ListUsersRequest {
}

message ListUsersResponse {
    repeated GetUserResponse users = 1;
}


message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string photoUrl = 4;
    string id = 5;
}

message CreateUserRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
    string photoUrl = 5;
}

message CreateUserResponse {
    string id = 1;
}